--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .DS_Store
 node_modules
-/dist
-
-*.exe
+/build
 
 # local env files
 .env.local
-.env.*.local
+.env.test.local
+.env.development.local
+.env.production.local
 
 # Log files
 .log*
