--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,14 @@
 {
   "name": "wails-test",
-  "author": "Virgil N<lieut9011@126.com>",
+  "author": "Virgil-N<lieut9011@126.com>",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/core": "7.4.3",
-    "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "4.2.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "@wailsapp/runtime": "^1.0.10",
-    "antd": "^4.15.1",
-    "axios": "^0.21.1",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
@@ -23,14 +20,14 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^7.11.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
-    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -40,11 +37,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
-    "js-cookie": "^2.2.1",
-    "jsencrypt": "^3.1.0",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "^4.14.1",
-    "ol": "^6.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -52,34 +45,26 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^17.0.1",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.13.1",
     "react-modal": "3.11.2",
-    "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
-    "styled-jsx": "^3.4.4",
-    "styled-jsx-plugin-sass": "^1.0.0",
-    "stylelint-config-standard": "^21.0.0",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
-    "use-deep-compare-effect": "^1.6.1",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "serve": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -121,9 +106,7 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
-    "modulePaths": [
-      "C:\\mySoftware\\node"
-    ],
+    "modulePaths": [],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
@@ -144,5 +127,11 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
-  }
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "devDependencies": {}
 }
