--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.4.3",
+    "@material-ui/core": "^4.12.3",
     "@svgr/webpack": "4.2.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
@@ -38,6 +39,7 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -52,9 +54,12 @@
     "react-modal": "3.11.2",
     "react-router": "^5.2.0",
     "resolve": "1.10.0",
+    "sass": "^1.38.1",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
+    "styled-jsx": "^4.0.0",
+    "styled-jsx-plugin-sass": "^1.0.0",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
@@ -126,11 +131,6 @@
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   },
   "devDependencies": {}
