--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/core": "7.4.3",
     "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.6.2",
     "@svgr/webpack": "4.2.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
@@ -56,7 +57,10 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.13.1",
     "react-modal": "3.11.2",
+    "react-redux": "^7.2.5",
     "react-router": "^5.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "resolve": "1.10.0",
     "sass": "^1.38.1",
     "sass-loader": "7.1.0",
